# LookPanorama

./: CMakeLists.txt  Look3D.pro  README.md  autocopy.bat  main.cpp  main.qml  qml.qrc
Capture/: AudioThread.cpp  AudioThread.h  BannerThread.cpp  BannerThread.h  CameraView.cpp  CameraView.h  Capture.cpp  Capture.h  CaptureAudio.cpp  CaptureAudio.h  CaptureDShow.cpp  CaptureDShow.h  CaptureDevices.cpp  CaptureDevices.h  CaptureImageFile.cpp  CaptureImageFile.h  CaptureLiDAR.cpp  CaptureLiDAR.h  CaptureThread.cpp  CaptureThread.h  LiDARThread.cpp  LiDARThread.h  PlaybackThread.cpp  PlaybackThread.h  PlaybackView.cpp  PlaybackView.h  VideoCapture.cpp  VideoCapture.h  captureptgrey.cpp  captureptgrey.h  config.h  multiplexmediacapturer.cpp  multiplexmediacapturer.h  signaler.cpp  signaler.h
Cloud/: PointCloud2.h  PointField.h  RosDataConverter.cpp  RosDataConverter.h  rosDuration.cpp  rosHeader.h  rosTime.cpp  rosTime.h
Common/: BaseFfmpeg.cpp  BaseFfmpeg.hpp  ConfigZip.cpp  ConfigZip.h  FfmpegUtils.hpp  GlobalAnimSettings.cpp  GlobalAnimSettings.h  PanoLog.cpp  PanoLog.h  PanoQueue.cpp  PanoQueue.h  QTHandler.cpp  QTHandler.h  SharedImageBuffer.cpp  SharedImageBuffer.h  SlotInfo.cpp  SlotInfo.h  StreamFfmpeg.cpp  StreamFfmpeg.hpp  TLogger.cpp  TLogger.h  TSystemSpec.cpp  TSystemTypes.h  TakeMgrTreeModel.cpp  TakeMgrTreeModel.h  common.cpp  common.h
GPU/: 3DMath.cpp  3DMath.h  GPUBanner.cpp  GPUBanner.h  GPUBoundary.cpp  GPUBoundary.h  GPUColorCvt.cpp  GPUColorCvt.h  GPUComposite.cpp  GPUComposite.h  GPUFeathering.cpp  GPUFeathering.h  GPUFinalPanorama.cpp  GPUFinalPanorama.h  GPUGainCompensation.cpp  GPUGainCompensation.h  GPUNodalBlending.cpp  GPUNodalBlending.h  GPUPanoramaPostProcessing.cpp  GPUPanoramaPostProcessing.h  GPUPanoramaWeight.cpp  GPUPanoramaWeight.h  GPUProgram.cpp  GPUProgram.h  GPUSeam.cpp  GPUSeam.h  GPUUnwarp.cpp  GPUUnwarp.h  GPUWeightMap.cpp  GPUWeightMap.h  GPUWeightVisualizer.cpp  GPUWeightVisualizer.h  SinglePanoramaUnit.cpp  SinglePanoramaUnit.h  SingleViewProcess.cpp  SingleViewProcess.h
GPU/CUDA/: CUDABanner.cpp  CUDABanner.h  CUDABoundary.cpp  CUDABoundary.h  CUDAColorCvt.cpp  CUDAColorCvt.h  CUDAFeathering.cpp  CUDAFeathering.h  CUDAFinalPanorama.cpp  CUDAFinalPanorama.h  CUDAGainCompensation.cpp  CUDAGainCompensation.h  CUDANodalBlending.cpp  CUDANodalBlending.h  CUDAPanoramaPostProcessing.cpp  CUDAPanoramaPostProcessing.h  CUDAUnwarp.cpp  CUDAUnwarp.h  CUDAWeightMap.cpp  CUDAWeightMap.h  CUDAWeightVisualizer.cpp  CUDAWeightVisualizer.h
GPU/CUDAKernels/: CudaCommon.cuh  Kernels_Banner.cu  Kernels_Boundary.cu  Kernels_ColorCvt.cu  Kernels_Feathering.cu  Kernels_FinalPanorama.cu  Kernels_GainCompensation.cu  Kernels_NodalBlending.cu  Kernels_PanoramaPostProcessing.cu  Kernels_Seam.cu  Kernels_Unwarp.cu  Kernels_WeightMap.cu  Kernels_WeightVisualizer.cu
GPU/Graphics/: GLSLBanner.cpp  GLSLBanner.h  GLSLBlending.cpp  GLSLBlending.h  GLSLBoundary.cpp  GLSLBoundary.h  GLSLBoxBlur.cpp  GLSLBoxBlur.h  GLSLColorCvt.cpp  GLSLColorCvt.h  GLSLFeathering.cpp  GLSLFeathering.h  GLSLFinalPanorama.cpp  GLSLFinalPanorama.h  GLSLGainCompensation.cpp  GLSLGainCompensation.h  GLSLGaussianBlur.cpp  GLSLGaussianBlur.h  GLSLLaplacian.cpp  GLSLLaplacian.h  GLSLMultibandBlending.cpp  GLSLMultibandBlending.h  GLSLNodalBlending.cpp  GLSLNodalBlending.h  GLSLPanoramaInteract.cpp  GLSLPanoramaInteract.h  GLSLPanoramaPostProcessing.cpp  GLSLPanoramaPostProcessing.h  GLSLPanoramaWeight.cpp  GLSLPanoramaWeight.h  GLSLPyramidSum.cpp  GLSLPyramidSum.h  GLSLResize.cpp  GLSLResize.h  GLSLUnwarp.cpp  GLSLUnwarp.h  GLSLWeightMap.cpp  GLSLWeightMap.h  GLSLWeightVisualizer.cpp  GLSLWeightVisualizer.h
GPU/Shaders/: Interact.frag  Oculus.frag  Oculus.vert  OculusGrid.frag  OculusGrid.vert  alphaSource.frag  banner.frag  bayerrg82rgb.frag  bgr02rgb.frag  bill.frag  blending.frag  boundary.frag  boxBlur.frag  cameraRegion.frag  cameraWeight.frag  composite.frag  deltaWeight.frag  deltaWeight.vert  finalPanoView.frag  gainCompensation.frag  imageRender.frag  imageRender.vert  laplacian.frag  mask.frag  merge.frag  nodalBlend.frag  panoPostProcessing.frag  panoView.frag  panoramaWeight.frag  resize.frag  rgb2rgb.frag  rgb2yuv420.frag  stitcher.frag  stitcher.vert  unwarp.glsl  visualizer.frag  yuv4202rgb.frag  yuv4222rgb.frag  yuvj422p2rgb.frag
Include/: BaseFfmpeg.hpp  Buffer.h  CaptureProp.h  Config.h  ImageBuffer.h  ImageHandler.h  RingBuffer.h  Structures.h  cTDate.h  define.h  pts.h  qedit.h
Process/: CalibProcess.cpp  CalibProcess.h  CoreEngine.cpp  CoreEngine.h  D360Parser.cpp  D360Parser.h  D360Process.cpp  D360Process.h  D360Stitcher.cpp  D360Stitcher.h  OculusViewer.cpp  OculusViewer.h  PlaybackStitcher.cpp  PlaybackStitcher.h  PtsParser.cpp  PtsParser.h  SelfCalibrator.cpp  SelfCalibrator.h  SnapshotDetector.cpp  SnapshotDetector.h  StreamProcess.cpp  StreamProcess.h
Setup/: Setup.isl  Setup.isproj
View/: ConsoleRunner.cpp  ConsoleRunner.h  MCQmlCameraView.cpp  MCQmlCameraView.h  Pixmap.cpp  Pixmap.h  QmlApplicationSetting.cpp  QmlApplicationSetting.h  QmlInteractiveView.cpp  QmlInteractiveView.h  QmlMainWindow.cpp  QmlMainWindow.h  QmlRecentDialog.cpp  QmlRecentDialog.h  QmlTakeManagement.cpp  QmlTakeManagement.h
WebVR/: index.html  index.php
WebVR/css/: app.css
WebVR/js/: app.js  build.js  core.js  hls.min.js  startVR.js  vr-panorama.js  wowza_player.min.js  wowzaplayer.js
docs/design/: Framework.vsdx  Pipeline.vsdx
examples/parameters/: OZO.PAC  OZO.pts
examples/stitch/: sequence_ozo.ini
qml/: Environment.qml  Header.qml  PlayStatus.qml  Recent.qml  RecentGriditem.qml  RecentListitem.qml  Status.qml  TemplateGriditem.qml  Toolbox.qml
qml/components/: Aboutbox.qml  Anaglyphbox.qml  ApplicationSetting.qml  BannerCtrl.qml  BlendSettings.qml  CTSettingbox.qml  CalibrationSettingbox.qml  CameraParameterItem.qml  CameraParams.qml  CameraParamsSettingbox.qml  CameraPreview.qml  CameraSettingbox.qml  CameraTemplateSettingbox.qml  CommentDialog.qml  ControlPoint.qml  DeckinkSettingbox.qml  DisplayLUTControl.qml  (+71 more)
webRTC_Server/: app.js  index.ejs  package.json
(+39 files in other folders)
